test/must_fail/api/must_fail_file_write_args3.ngjs
#!/usr/bin/env ngspicejs
// too many args
// linter: ngspicejs-lint
"use strict";

file_write('asdf', '123', 123);
